--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+documentation/**
 
 # Created by https://www.toptal.com/developers/gitignore/api/unity,rider
 # Edit at https://www.toptal.com/developers/gitignore?templates=unity,rider
