Add more extendability & freeze prevention

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 documentation/**
 
+.DS_Store
+
 # Created by https://www.toptal.com/developers/gitignore/api/unity,rider
 # Edit at https://www.toptal.com/developers/gitignore?templates=unity,rider
 
