--- a/Packages/com.clpsplug.uniswitcher/package.json
+++ b/Packages/com.clpsplug.uniswitcher/package.json
@@ -12,7 +12,7 @@
   },
   "documentationUrl": "https://github.com/clpsplug/uniswitcher/wiki",
   "license": "MIT",
-  "dependencies": {
+  "gitDependencies": {
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
     "com.svermeulen.extenject": "https://github.com/starikcetin/Extenject.git#upm"
   }
