--- a/Packages/com.clpsplug.uniswitcher/Runtime/UniSwitcher.asmdef
+++ b/Packages/com.clpsplug.uniswitcher/Runtime/UniSwitcher.asmdef
@@ -1,8 +1,9 @@
 {
     "name": "UniSwitcher",
+    "rootNamespace": "UniSwitcher",
     "references": [
-        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23"
+        "Zenject",
+        "UniTask"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
