--- a/Packages/com.clpsplug.uniswitcher/package.json
+++ b/Packages/com.clpsplug.uniswitcher/package.json
@@ -4,7 +4,10 @@
   "description": "Scene transition task wrapper based on Zenject",
   "displayName": "UniSwitcher",
   "unity": "2020.1",
-  "keywords": ["scene", "transition"],
+  "keywords": [
+    "scene",
+    "transition"
+  ],
   "author": {
     "name": "C. Plug",
     "email": "clpsplug@clpsplug.com",
@@ -15,5 +18,8 @@
   "gitDependencies": {
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
     "com.svermeulen.extenject": "https://github.com/starikcetin/Extenject.git#upm"
+  },
+  "dependencies": {
+    "com.unity.test-framework": "1.1.31"
   }
 }
