--- a/Assets/Scripts/Sample.asmdef
+++ b/Assets/Scripts/Sample.asmdef
@@ -14,6 +14,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.services.analytics",
+            "expression": "4.0.0",
+            "define": "UGS_ANALYTICS"
+        }
+    ],
     "noEngineReferences": false
 }
