--- a/Packages/com.clpsplug.uniswitcher/package.json
+++ b/Packages/com.clpsplug.uniswitcher/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.clpsplug.uniswitcher",
-  "version": "1.2.3rc1",
+  "version": "1.2.4",
   "description": "Scene transition task wrapper based on Zenject",
   "displayName": "UniSwitcher",
   "unity": "2020.1",
