--- a/Packages/com.clpsplug.uniswitcher/package.json
+++ b/Packages/com.clpsplug.uniswitcher/package.json
@@ -16,7 +16,7 @@
   "documentationUrl": "https://github.com/clpsplug/uniswitcher/wiki",
   "license": "MIT",
   "gitDependencies": {
-    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask#2.3.1",
     "com.svermeulen.extenject": "https://github.com/starikcetin/Extenject.git#upm"
   }
 }
