--- a/Packages/com.clpsplug.uniswitcher/package.json
+++ b/Packages/com.clpsplug.uniswitcher/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.clpsplug.uniswitcher",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "Scene transition task wrapper based on Zenject",
   "displayName": "UniSwitcher",
   "unity": "2020.1",
@@ -16,7 +16,7 @@
   "documentationUrl": "https://github.com/clpsplug/uniswitcher/wiki",
   "license": "MIT",
   "gitDependencies": {
-    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask#2.3.1",
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
     "com.svermeulen.extenject": "https://github.com/starikcetin/Extenject.git#upm"
   }
 }
